+ Fixed bugs in database + Added ProductMasterList to keep track of all valid products